# docs/swagger.json
@@ -127,18 +127,12 @@
             }
         },
         "/songs/{id}": {
-            "put": {
-                "description": "Обновляет информацию о песне по её ID. Поля, которые не переданы, остаются без изменений.",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
+            "delete": {
+                "description": "Удаляет песню по её ID.",
                 "tags": [
                     "Песни"
                 ],
-                "summary": "Изменить данные песни",
+                "summary": "Удалить песню",
                 "parameters": [
                     {
                         "type": "integer",
@@ -146,22 +140,13 @@
                         "name": "id",
                         "in": "path",
                         "required": true
-                    },
-                    {
-                        "description": "Обновленные данные песни (поля, которые могут быть изменены)",
-                        "name": "song",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.UpdateSongRequest"
-                        }
                     }
                 ],
                 "responses": {
                     "200": {
-                        "description": "Успешное обновление песни",
+                        "description": "Успешное удаление песни",
                         "schema": {
-                            "$ref": "#/definitions/models.Song"
+                            "$ref": "#/definitions/models.MessageResponse"
                         }
                     },
                     "400": {
@@ -184,12 +169,18 @@
                     }
                 }
             },
-            "delete": {
-                "description": "Удаляет песню по её ID.",
+            "patch": {
+                "description": "Обновляет информацию о песне по её ID. Поля, которые не переданы, остаются без изменений.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
                 "tags": [
                     "Песни"
                 ],
-                "summary": "Удалить песню",
+                "summary": "Изменить данные песни",
                 "parameters": [
                     {
                         "type": "integer",
@@ -197,11 +188,20 @@
                         "name": "id",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "description": "Поля, которые могут быть изменены (отправьте только те поля, которые требуют изменений)",
+                        "name": "song",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.UpdateSongRequest"
+                        }
                     }
                 ],
                 "responses": {
                     "200": {
-                        "description": "Успешное удаление песни",
+                        "description": "Успешное обновление песни",
                         "schema": {
                             "$ref": "#/definitions/models.MessageResponse"
                         }
@@ -305,47 +305,10 @@
                 }
             }
         },
-        "models.Group": {
-            "type": "object",
-            "properties": {
-                "id": {
-                    "type": "integer"
-                },
-                "name": {
-                    "type": "string"
-                }
-            }
-        },
         "models.MessageResponse": {
             "type": "object",
             "properties": {
                 "message": {
-                    "type": "string"
-                }
-            }
-        },
-        "models.Song": {
-            "type": "object",
-            "properties": {
-                "group": {
-                    "$ref": "#/definitions/models.Group"
-                },
-                "groupID": {
-                    "type": "integer"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "link": {
-                    "type": "string"
-                },
-                "releaseDate": {
-                    "type": "string"
-                },
-                "song": {
-                    "type": "string"
-                },
-                "text": {
                     "type": "string"
                 }
             }
@@ -377,24 +340,20 @@
             "type": "object",
             "properties": {
                 "group": {
-                    "type": "string",
-                    "example": ""
+                    "type": "string"
                 },
                 "link": {
-                    "type": "string",
-                    "example": ""
+                    "type": "string"
                 },
                 "releaseDate": {
                     "type": "string",
-                    "example": ""
+                    "example": "0001-01-01"
                 },
                 "song": {
-                    "type": "string",
-                    "example": ""
+                    "type": "string"
                 },
                 "text": {
-                    "type": "string",
-                    "example": ""
+                    "type": "string"
                 }
             }
         }
